--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,8 @@
 {
-  "buildCommand": "cd frontend && npm run build",
-  "outputDirectory": "frontend/dist",
+  "buildCommand": "npm run build",
+  "outputDirectory": "dist",
+  "installCommand": "npm install",
+  "cwd": "frontend",
   "rewrites": [
     {
       "source": "/(.*)",
